--- a/app/views/irm/licenses/_edit_form.html.erb
+++ b/app/views/irm/licenses/_edit_form.html.erb
@@ -1,110 +1,109 @@
-<%= form_for(@license,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= form_for(@license,:url=>{:action=>"update"},:builder => CustomFormBuilder) do |f| %>
+  <% content_for :form_block_common   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_irm_license_new)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label for="license_name"><%=t(:label_irm_license_name)%></label></td>
+            <td class="data-col"><%=f.text_field :name, :required=>true ,:id=>"license_name"%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="license_code"><%=t(:label_irm_license_code)%></label></td>
+            <td class="data-col"><%=f.text_field :code, :required=>true ,:id=>"license_code"%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="license_description"><%=t(:label_irm_license_description)%></label></td>
+            <td class="data-col" colspan="3" width="82%"><%=f.text_area :description,:rows=>4,:cols=>60 ,:id=>"license_description",:class=>"input-xlarge"%></td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <%= error_for @license %>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
-    </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label for="license_name"><%=t(:label_irm_license_name)%></label></td>
-              <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"license_name"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="license_code"><%=t(:label_irm_license_code)%></label></td>
-              <td class="dataCol"><%=f.text_field :code, :required=>true ,:id=>"license_code"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label for="license_description"><%=t(:label_irm_license_description)%></label></td>
-              <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description,:rows=>4,:cols=>60 ,:id=>"license_description"%></td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
-
-    <div class="pbSubheader first tertiaryPalette">
-      <h3><%= t(:label_irm_profile_function_list) %></h3>
-    </div>
-    <div class="pbSubsection" id="selectableFunctions">
+  <% end %>
+  <% content_for :form_block_functions do %>
     <% gfs = available_grouped_functions %>
     <% fzs = function_zones %>
     <% pfids = @license.function_ids %>
     <% fzs.each do |zone|%>
       <% next unless gfs[zone[:code]]&&gfs[zone[:code]].any?%>
-      <% tr_count = 2%>
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+      <% tr_count = 2%>    
+      <table class="form-table">
         <tbody>
           <tr>
-            <td style="font-weight:bold;font-size:13px;padding:15px 0 0 15px"><%= zone[:name] %></td>
+            <td style="font-weight:bold;font-size:13px;padding:15px 0 0 15px; text-align: left;"><%= zone[:name] %></td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
           </tr>
-            <% if gfs[zone[:code]].size>1%>
-                <tr>
-                  <td class="labelCol"><label><%= t :select_all %></label></td>
-                  <td class="dataCol"><%= check_box_tag 'select_all',"all" , false,{:ref=>"#{zone[:code].downcase}Group",:class=>"selectAll"} %></td>
-                </tr>
-            <% end %>
+          <% if gfs[zone[:code]].size>1%>
+            <tr>
+              <td class="label-col"><label><%= t :select_all %></label></td>
+              <td class="data-col"><%= check_box_tag 'select_all',"all" , false,{:ref=>"#{zone[:code].downcase}Group",:class=>"selectAll"} %></td>
+            </tr>
+          <% end %>
         </tbody>
         <tbody id="<%= zone[:code].downcase %>Group">
             <tr>
             <% gfs[zone[:code]].each do |func| %>
                 <%= raw("</tr><tr>") if tr_count == 0 %>
                 <% tr_count = 2 if tr_count == 0 %>
-                <td class="labelCol"><label><%= func[:name] %></label></td>
-                <td class="dataCol"><%= check_box_tag 'functions[]', func.id, pfids.include?(func.id)||(pfids.size==0&&func.default_flag.eql?(Irm::Constant::SYS_YES)) %></td>
+                <td class="label-col"><label><%= func[:name] %></label></td>
+                <td class="data-col"><%= check_box_tag 'functions[]', func.id, pfids.include?(func.id)||(pfids.size==0&&func.default_flag.eql?(Irm::Constant::SYS_YES)) %></td>
                 <% tr_count = tr_count - 1 %>
             <% end%>
             </tr>
         </tbody>
       </table>
-    <%end%>
+    <% end %>
+  <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_to t(:cancel), {:action=>"index"}, {:class => "btn cancel"}%>
+  <% end %>
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_irm_license_edit)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+    <div class="page-block-body">
+      <%= error_for @license %>
+      <div class="sub-page-block">
+        <!-- 一般信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+        <!-- 功能列表 -->
+        <div class="sub-page-block-header">
+          <h3 class="sub-page-block-title"><%= t(:label_irm_profile_function_list) %></h3>
+        </div>
+        <div class="sub-page-block-body" id="selectableFunctions">
+          <%= content_for :form_block_functions   %>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
-      </tbody>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
     </table>
   </div>
-</div>
 <% end %>
-
 <script type="text/javascript">
   $(function(){
       $("#selectableFunctions .selectAll").live('click', function(e){
@@ -117,6 +116,5 @@
                  $(e).attr("checked",false)
            })
       });
-
   });
 </script>
