--- a/app/views/irm/licenses/show.html.erb
+++ b/app/views/irm/licenses/show.html.erb
@@ -1,79 +1,84 @@
 <%= common_title(:show_data=>@license[:name]) %>
-
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_license) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:edit), {:action => "edit"}%></div>
-            <div class="button"><%= link_to t(:back), {:action => "index"}%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label ><%=t(:label_irm_license_name)%></label></td>
-              <td class="dataCol"><div><%= @license[:name] %></div></td>
-              <td class="labelCol empty"><div>&nbsp;</div></td>
-              <td class="dataCol empty"><div>&nbsp;</div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label ><%=t(:label_irm_license_code)%></label></td>
-              <td class="dataCol"><div><%= @license.code %></div></td>
-              <td class="labelCol empty"><div>&nbsp;</div></td>
-              <td class="dataCol empty"><div>&nbsp;</div></td>
-            </tr>
-            <tr>
-              <td class="labelCol"><label ><%=t(:label_irm_license_description)%></label></td>
-              <td class="dataCol"><div><%= @license[:description] %></div></td>
-              <td class="labelCol empty"><div>&nbsp;</div></td>
-              <td class="dataCol empty"><div>&nbsp;</div></td>
-            </tr>
-        </tbody>
-      </table>
+<!--页面结构-->
+<div class="show-block">
+  <!-- 人员信息 -->
+  <table class="page-block-header">
+    <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%= t(:label_irm_license) %></h2>
+        </td>
+        <td class="page-block-button">
+          <%= link_to t(:edit), {:action => "edit"},:class=>"btn btn-primary" %>
+          <%= link_to t(:new),{:action => "new"},:class => "btn" %>
+          <%= link_to t(:back), {:action => "index"},:class=>"btn"%>
+        </td>
+    </tr>
+  </table>
+  <div class="page-block-body">
+    <!-- 一般信息 -->
+    <div class="sub-page-block">
+      <div class="sub-page-block-header">
+        <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+      </div>
+      <div class="sub-page-block-body">
+        <table class="show-table">
+          <tbody>
+              <tr>
+                <td class="label-col"><label ><%=t(:label_irm_license_name)%></label></td>
+                <td class="data-col"><div><%= @license[:name] %></div></td>
+                <td class="label-col empty"><div>&nbsp;</div></td>
+                <td class="data-col empty"><div>&nbsp;</div></td>
+              </tr>
+              <tr>
+                <td class="label-col"><label ><%=t(:label_irm_license_code)%></label></td>
+                <td class="data-col"><div><%= @license.code %></div></td>
+                <td class="label-col empty"><div>&nbsp;</div></td>
+                <td class="data-col empty"><div>&nbsp;</div></td>
+              </tr>
+              <tr>
+                <td class="label-col"><label ><%=t(:label_irm_license_description)%></label></td>
+                <td class="data-col"><div><%= @license[:description] %></div></td>
+                <td class="label-col empty"><div>&nbsp;</div></td>
+                <td class="data-col empty"><div>&nbsp;</div></td>
+              </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
-  </div>
-
-  <div class="pbBody">
-    <div class="pbSubheader tertiaryPalette">
-      <h3><%= t(:label_irm_profile_function_list) %><span class="titleSeparatingColon">:</span></h3>
-    </div>
-
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-        <% pfids = @license.function_ids %>
-        <% gfs = available_grouped_functions(pfids) %>
-        <% fzs = function_zones %>
-        <% fzs.each do |zone|%>
-          <% next unless gfs[zone[:code]]&&gfs[zone[:code]].any?%>
-          <% tr_count = 2%>
-          <tr>
-            <td style="font-weight:bold;font-size:13px;padding:15px 0 2px 0"><%= zone[:name] %></td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-          </tr>
-          <tr>
-            <% gfs[zone[:code]].each do |func| %>
-                <% next unless pfids.include?(func.id) %>
-                <%= raw("</tr><tr>") if tr_count == 0 %>
-                <% tr_count = 2 if tr_count == 0 %>
-                <td class="labelCol"><%= func[:name] %></td>
-                <td class="dataCol"><%= check_img("Y") %></td>
-                <% tr_count = tr_count - 1 %>
-            <% end%>
-          </tr>
-        <%end%>
-        </tbody>
-      </table>
+    <!-- 功能列表 -->
+    <div class="sub-page-block">
+      <div class="sub-page-block-header">
+          <h3 class="sub-page-block-title"><%= t(:label_irm_profile_function_list) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <table class="show-table">
+            <tbody>
+            <% pfids = @license.function_ids %>
+            <% gfs = available_grouped_functions(pfids) %>
+            <% fzs = function_zones %>
+            <% fzs.each do |zone|%>
+              <% next unless gfs[zone[:code]]&&gfs[zone[:code]].any?%>
+              <% tr_count = 2%>
+              <tr>
+                <td style="font-weight:bold;font-size:13px;padding:15px 0 2px 0;text-align: left;"><%= zone[:name] %></td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+              </tr>
+              <tr>
+                <% gfs[zone[:code]].each do |func| %>
+                    <% next unless pfids.include?(func.id) %>
+                    <%= raw("</tr><tr>") if tr_count == 0 %>
+                    <% tr_count = 2 if tr_count == 0 %>
+                    <td class="label-col"><%= func[:name] %></td>
+                    <td class="data-col"><%= check_img("Y") %></td>
+                    <% tr_count = tr_count - 1 %>
+                <% end%>
+              </tr>
+            <%end%>
+            </tbody>
+          </table>
+        </div>
     </div>
   </div>
 </div>
