--- a/app/views/chm/change_task_templates/show_tasks.html.erb
+++ b/app/views/chm/change_task_templates/show_tasks.html.erb
@@ -1,46 +1,50 @@
-<%= page_block("showTemplate",:show=>true) do |pb| %>
-    <%= pb.page_block_header({:title=>@change_task_template[:name]}) do%>
-      <td id="topButtonRow" class="pbButton">
+<style type="text/css">
+  .no-line {
+      border-top: none;
+  }
+</style>
+<div class="page-block no-line">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= @change_task_template[:name] %></h2>
       </td>
-      <td class="pbHelp">
+    </tr>
+  </table>
+  <div class="page-block-body">
+    <table class="show-table">
+      <tbody>
+          <tr>
+            <td class="label-col"><label for="code"><%=t(:code)%></label></td>
+            <td class="data-col"><%=@change_task_template.code%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="name"><%=t(:name)%></label></td>
+            <td class="data-col"><%=@change_task_template[:name]%></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+
+          <tr>
+            <td class="label-col"><label for="description"><%=t(:description)%></label></td>
+            <td class="data-col" colspan="3" width="82%"><%=@change_task_template[:description]%></td>
+          </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<div class="page-block">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:label_chm_change_template_task) %></h2>
       </td>
-    <% end %>
-
-    <%= pb.page_block_body do %>
-      <table class="detailList infoList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-                <tr>
-                  <td class="labelCol"><label for="code"><%=t(:code)%></label></td>
-                  <td class="dataCol"><%=@change_task_template.code%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label for="name"><%=t(:name)%></label></td>
-                  <td class="dataCol"><%=@change_task_template[:name]%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-
-                <tr>
-                  <td class="labelCol"><label for="description"><%=t(:description)%></label></td>
-                  <td class="dataCol" colspan="3" width="82%"><%=@change_task_template[:description]%></td>
-                </tr>
-        </tbody>
-      </table>
-    <% end %>
-<% end %>
-
-
-<%= page_block("showTask") do |pb| %>
-    <%= pb.page_block_header({:title=>t(:label_chm_change_template_task)}) do%>
-      <td  class="pbButton">
-      </td>
-      <td class="pbHelp">
-      </td>
-    <% end %>
-
-    <%= pb.page_block_body do %>
-        <%= render :partial=>"show_tasks",:locals=>{:datas=>change_template_tasks(@change_task_template.id)} %>
-    <% end %>
-<% end %>
+    </tr>
+  </table>
+  <div class="page-block-body">
+    <%= render :partial=>"show_tasks",:locals=>{:datas=>change_template_tasks(@change_task_template.id)} %>
+  </div>
+</div>
