--- a/app/views/chm/change_tasks/template_new.html.erb
+++ b/app/views/chm/change_tasks/template_new.html.erb
@@ -1,56 +1,76 @@
-<%= page("newTaskPhase") do |p| %>
-    <%= p.page_header({:title_options=>{:action_meaning=>t(:label_chm_change_task_template_new)}}) %>
-    <%= p.page_body do %>
-        <%= form_for(@change_task,:url=>{:action=>"template_create"},:builder => LabellingFormBuilder) do |f| %>
-            <%= page_block("newImpact") do |pb|%>
-                <%= pb.page_block_header(:title=>t(:label_chm_change_task_template_new)) do %>
-                  <td id="topButtonRow" class="pbButton">
-                    <div class="button"><%= link_submit t(:save)%></div>
-                    <div class="button"><%= link_back t(:cancel)%></div>
-                  </td>
-                  <td class="pbHelp">
-                  </td>
+<%= common_title({:action_meaning=>t(:label_chm_change_task_template_new)}) %>
+<%= form_for(@change_task,:url=>{:action=>"template_create"},:builder => CustomFormBuilder) do |f| %>
+    <%= f.hidden_field :source_id %>
+    <%= f.hidden_field :source_type %>
+    <% content_for :form_block_common   do%>
+    <table class="form-table">
+      <tbody>
+        <tr>
+          <td class="label-col empty"><label for="status_code"><%=(t :label_chm_change_task_change_task_template)%></label></td>
+          <td class="data-col"><%=f.select :change_task_phase_id, options_for(Chm::ChangeTaskTemplate),{},{:id=>"taskPhase",:required=>true}%></td>
+          <td class="label-col"></td>
+          <td class="data-col"></td>
+        </tr>
+      </tbody>
+    </table>
+  <% end %>
 
-                <% end %>
-               <%= pb.page_block_body do %>
-                    <%= error_for @change_task%>
-                    <%= sub_page_block("baseInfo") do |spb|%>
-                        <%= f.hidden_field :source_id %>
-                        <%= f.hidden_field :source_type %>
-                        <%= spb.sub_page_block_header(:title=>t(:label_common_info),:first=>true)%>
-                        <%= spb.sub_page_block_body do %>
-                            <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-                              <tbody>
-                                <tr>
-                                  <td class="labelCol empty"><label for="status_code"><%=(t :label_chm_change_task_change_task_template)%></label></td>
-                                  <td class="dataCol"><%=f.select :change_task_phase_id, options_for(Chm::ChangeTaskTemplate),{},{:id=>"taskPhase",:required=>true}%></td>
-                                  <td class="labelCol"></td>
-                                  <td class="dataCol"></td>
-                                </tr>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_back t(:cancel),{},{:class => "btn"}%>
+  <% end %>
 
-                              </tbody>
-                            </table>
-                        <% end %>
-                  <% end %>
-                </div>
-                <%= pb.page_block_footer do %>
-                  <td id="topButtonRow" class="pbButton">
-                    <div class="button"><%= link_submit t(:save)%></div>
-                    <div class="button"><%= link_back t(:cancel)%></div>
-                  </td>
-                <% end %>
-            <% end %>
-            <% end %>
-        <% end %>
-        <%= page_block("templateInfo") do |pb|%>
-            <%= pb.page_block_header(:title=>t(:label_chm_change_task_template)) %>
-            <%= pb.page_block_body do %>
-                <div id="showInfo" href="<%= url_for({:controller => "chm/change_task_templates",:action=>"show_tasks",:id=>"{template_id}"}) %>"></div>
-            <% end %>
-        <% end %>
-    <% end %>
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%=t(:label_chm_change_task_template_new)%></h2>
+        </td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+    <%= error_for @change_task%>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <!-- 一般信息 -->
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%=t(:label_common_info)%></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+      </div>
+    </div>
+    <table class="page-block-footer">
+      <tr>
+        <td class="page-block-title"></td>
+        <td class="page-block-button">
+          <%= content_for :form_buttons   %>
+        </td>
+      </tr>
+    </table>
+  </div>
+
+  <div class="page-block">
+    <table class="page-block-header">
+      <tr>
+        <td class="page-block-title">
+          <h2 class="block-title"><%= t(:label_chm_change_task_template) %></h2>
+        </td>
+      </tr>
+    </table>
+    <div class="page-block-body">
+      <div id="showInfo" href="<%= url_for({:controller => "chm/change_task_templates",:action=>"show_tasks",:id=>"{template_id}"}) %>"></div>
+    </div>
+  </div>
+
 <% end %>
-<script>
+
+<script type="text/javascript">
   $("#taskPhase").change(function(e){
       $("#templateInfoBlock").css("display","none");
       if(e.target.value){
