--- a/app/views/irm/reports/index.html.erb
+++ b/app/views/irm/reports/index.html.erb
@@ -8,17 +8,22 @@
         <%= link_to(t(:edit),{:controller => "irm/report_folders",:action=>"edit",:id=>"${folderId}"},{:style=>"display:none;",:id=>"folderEditLink",:class=>"btn"}) %>
       </td>
       <td class="page-block-button">
-        <div class="btn-group" style="float: left;display: inline-block;padding-right: 10px;">
-          <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-            <%= t(:new)  %>
-            <span class="caret"></span>
-          </a>
-          <ul class="dropdown-menu">
-            <li><%= link_to(t(:label_irm_report_new_custom),{:action => "new"})%></li>
-            <li><%= link_to(t(:label_irm_report_new_program),{:action => "new_program"}) %></li>
-          </ul>
+        <div class="btn-toolbar">
+          <div class="btn-group">
+            <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+              <%= t(:new)  %>
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to(t(:label_irm_report_new_custom),{:action => "new"})%></li>
+              <li><%= link_to(t(:label_irm_report_new_program),{:action => "new_program"}) %></li>
+            </ul>
+          </div>
+          <div class="btn-group">
+            <a href="javascript:void(0)" class="submit btn btn-info"><%= t(:export) %></a>
+          </div>
         </div>
-        <a href="javascript:void(0)" class="btn btn-info"><%= t(:export) %></a>
+
       </td>
       <td class="page-block-help">
         <div id="searchBox"></div>
